[gd_scene load_steps=2 format=3 uid="uid://c8qjd7s8x1y6"]

[ext_resource type="Script" path="res://Scripts/UI/Scoreboard.gd" id="1_score"]

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_score")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Team1Panel" type="Panel" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/HBoxContainer/Team1Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.5, 1, 1)
theme_override_font_sizes/font_size = 30
text = "BLUE TEAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/Team1Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="CenterContainer/HBoxContainer/Team1Panel/VBoxContainer"]
layout_mode = 2
text = "Players"
horizontal_alignment = 1

[node name="Team2Panel" type="Panel" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="CenterContainer/HBoxContainer/Team2Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 30
text = "RED TEAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/Team2Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="CenterContainer/HBoxContainer/Team2Panel/VBoxContainer"]
layout_mode = 2
text = "Players"
horizontal_alignment = 1
